--- a/index.html
+++ b/index.html
@@ -57,10 +57,9 @@
         
         <!-- Header -->
         <header class="mb-12 text-center">
-            <h1 class="text-3xl md:text-4xl font-bold text-slate-800">Datamorgana - East Java Datathon 2025</h1>
-            <p class="max-w-3xl mx-auto text-slate-500 mt-4">
-                Mengukur Inovasi, Mendorong Pertumbuhan Ekonomi UMKM.
-                <span class="block mt-2">UMKM adalah tulang punggung ekonomi Jawa Timur, namun potensinya belum terukur optimal. Kami memperkenalkan Indeks Inovasi Produk Lokal (IIPL), sebuah cara baru untuk memetakan daya saing dan mendorong kebijakan berbasis data yang lebih tepat sasaran.</span>
+            <h1 class="text-3xl md:text-4xl font-bold text-slate-800">Datamorgana</h1>
+            <p class="max-w-2xl mx-auto text-slate-500 mt-3">
+               Sebuah dasbor analisis untuk memetakan potensi inovasi UMKM di Jawa Timur melalui Indeks Inovasi Produk Lokal (IIPL).
             </p>
         </header>
 
@@ -240,4 +239,5 @@
     </script>
 </body>
 </html>
+
 
