--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
         
         /* Styling untuk Donut Chart */
         .donut-chart {
-            width: 150px;
-            height: 150px;
+            width: 200px; /* Diperbesar dari 150px */
+            height: 200px; /* Diperbesar dari 150px */
             border-radius: 50%;
             background: conic-gradient(
                 #14b8a6 0% 49%,   /* Perdagangan */
@@ -95,7 +95,7 @@
             <div class="h-full flex flex-col space-y-6">
                 <!-- Header Konten -->
                 <header>
-                    <p class="text-slate-500">Memetakan Kualitas Inovasi untuk Mendorong Pertumbuhan Ekonomi Daerah</p>
+                    <p class="text-slate-500">Memetakan Kualitas Inovasi untuk Mendorong Pertumbuhan Ekonomi Daerah.</p>
                 </header>
 
                 <!-- Kartu Metrik Utama -->
@@ -111,17 +111,17 @@
                     <!-- Panel Overview -->
                     <div id="panel-overview" class="page-panel active">
                          <div class="bg-white h-full p-6 rounded-2xl soft-shadow">
-                            <h3 class="font-bold text-lg text-slate-800 mb-4 text-center">Distribusi UMKM Berdasarkan Sektor</h3>
-                            <div class="flex flex-col md:flex-row items-center justify-center gap-6">
+                            <h3 class="font-bold text-lg text-slate-800 mb-6 text-center">Distribusi UMKM Berdasarkan Sektor</h3>
+                            <div class="flex flex-col md:flex-row items-center justify-center gap-12">
                                 <div class="donut-chart relative">
-                                    <div class="absolute inset-4 bg-white rounded-full"></div>
+                                    <div class="absolute inset-5 bg-white rounded-full"></div>
                                 </div>
-                                <ul class="space-y-2 text-sm">
-                                    <li class="flex items-center gap-2"><div class="w-3 h-3 rounded-full bg-teal-500"></div><span class="font-medium text-slate-700">Perdagangan:</span><span class="text-slate-500">49% (~4.8 Jt)</span></li>
-                                    <li class="flex items-center gap-2"><div class="w-3 h-3 rounded-full bg-teal-400"></div><span class="font-medium text-slate-700">Jasa:</span><span class="text-slate-500">24% (~2.3 Jt)</span></li>
-                                    <li class="flex items-center gap-2"><div class="w-3 h-3 rounded-full bg-teal-300"></div><span class="font-medium text-slate-700">Pertanian:</span><span class="text-slate-500">12% (~1.2 Jt)</span></li>
-                                    <li class="flex items-center gap-2"><div class="w-3 h-3 rounded-full bg-teal-200"></div><span class="font-medium text-slate-700">Manufaktur:</span><span class="text-slate-500">10% (~970 Rb)</span></li>
-                                    <li class="flex items-center gap-2"><div class="w-3 h-3 rounded-full bg-teal-100"></div><span class="font-medium text-slate-700">FnB:</span><span class="text-slate-500">5% (~730 Rb)</span></li>
+                                <ul class="space-y-3 text-base">
+                                    <li class="flex items-center gap-3"><div class="w-4 h-4 rounded-full bg-teal-500"></div><span class="font-semibold text-slate-700">Perdagangan:</span><span class="text-slate-500">49% (~4.8 Jt)</span></li>
+                                    <li class="flex items-center gap-3"><div class="w-4 h-4 rounded-full bg-teal-400"></div><span class="font-semibold text-slate-700">Jasa:</span><span class="text-slate-500">24% (~2.3 Jt)</span></li>
+                                    <li class="flex items-center gap-3"><div class="w-4 h-4 rounded-full bg-teal-300"></div><span class="font-semibold text-slate-700">Pertanian:</span><span class="text-slate-500">12% (~1.2 Jt)</span></li>
+                                    <li class="flex items-center gap-3"><div class="w-4 h-4 rounded-full bg-teal-200"></div><span class="font-semibold text-slate-700">Manufaktur:</span><span class="text-slate-500">10% (~970 Rb)</span></li>
+                                    <li class="flex items-center gap-3"><div class="w-4 h-4 rounded-full bg-teal-100"></div><span class="font-semibold text-slate-700">FnB:</span><span class="text-slate-500">5% (~730 Rb)</span></li>
                                 </ul>
                             </div>
                          </div>
