--- a/index.html
+++ b/index.html
@@ -117,11 +117,12 @@
                                     <div class="absolute inset-5 bg-white rounded-full"></div>
                                 </div>
                                 <ul class="space-y-3 text-base">
-                                    <li class="flex items-center gap-3"><div class="w-4 h-4 rounded-full bg-teal-500"></div><span class="font-semibold text-slate-700">Perdagangan:</span><span class="text-slate-500">49% (~4.8 Jt)</span></li>
-                                    <li class="flex items-center gap-3"><div class="w-4 h-4 rounded-full bg-teal-400"></div><span class="font-semibold text-slate-700">Jasa:</span><span class="text-slate-500">24% (~2.3 Jt)</span></li>
-                                    <li class="flex items-center gap-3"><div class="w-4 h-4 rounded-full bg-teal-300"></div><span class="font-semibold text-slate-700">Pertanian:</span><span class="text-slate-500">12% (~1.2 Jt)</span></li>
-                                    <li class="flex items-center gap-3"><div class="w-4 h-4 rounded-full bg-teal-200"></div><span class="font-semibold text-slate-700">Manufaktur:</span><span class="text-slate-500">10% (~970 Rb)</span></li>
-                                    <li class="flex items-center gap-3"><div class="w-4 h-4 rounded-full bg-teal-100"></div><span class="font-semibold text-slate-700">FnB:</span><span class="text-slate-500">5% (~730 Rb)</span></li>
+                                    <li class="flex items-center gap-3"><div class="w-4 h-4 rounded-full bg-teal-600"></div><span class="font-semibold text-slate-700">Perdagangan:</span><span class="text-slate-500">48% (~4.8 Jt)</span></li>
+                                    <li class="flex items-center gap-3"><div class="w-4 h-4 rounded-full bg-teal-500"></div><span class="font-semibold text-slate-700">Jasa:</span><span class="text-slate-500">23% (~2.3 Jt)</span></li>
+                                    <li class="flex items-center gap-3"><div class="w-4 h-4 rounded-full bg-teal-400"></div><span class="font-semibold text-slate-700">Pertanian:</span><span class="text-slate-500">12% (~1.2 Jt)</span></li>
+                                    <li class="flex items-center gap-3"><div class="w-4 h-4 rounded-full bg-teal-300"></div><span class="font-semibold text-slate-700">Manufaktur:</span><span class="text-slate-500">10% (~970 Rb)</span></li>
+                                    <li class="flex items-center gap-3"><div class="w-4 h-4 rounded-full bg-teal-200"></div><span class="font-semibold text-slate-700">FnB:</span><span class="text-slate-500">7% (~730 Rb)</span></li>
+                                    <li class="flex items-center gap-3"><div class="w-4 h-4 rounded-full bg-teal-100"></div><span class="font-semibold text-slate-700">Kosmetik:</span><span class="text-slate-500">4% (~370 Rb)</span></li>
                                 </ul>
                             </div>
                          </div>
