--- a/index.html
+++ b/index.html
@@ -196,9 +196,10 @@
                             </div>
                         </div>
                     </div>
+                    
 
                     <!-- Panel Choropleth Map -->
-                    <div id="panel-map" class="page-panel">
+                    <div id="panel-map" class="page-panel active">
                         <div class="bg-white h-full p-6 rounded-2xl soft-shadow">
                             <h3 class="font-bold text-lg text-slate-800 mb-6 text-center">Peta IIPL Jawa Timur</h3>
                             <div id="map" class="w-full h-[600px] rounded-xl overflow-hidden"></div>
