--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
         <section id="latar-belakang" class="mb-32">
             <div class="text-center mb-16">
                 <h2 class="text-3xl lg:text-4xl font-bold mb-4 fade-in">Tulang Punggung Ekonomi dengan Tantangan Tersembunyi</h2>
-                <p class="text-gray-400 max-w-3xl mx-auto fade-in">Meskipun UMKM adalah kekuatan dominan di Jawa Timur, kualitas dan inovasi sering terabaikan, menciptakan sebuah *policy gap* yang signifikan.</p>
+                <p class="text-gray-400 max-w-3xl mx-auto fade-in">Meskipun UMKM adalah kekuatan dominan di Jawa Timur, kualitas dan inovasi sering terabaikan, menciptakan sebuah policy gap yang signifikan.</p>
             </div>
             <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-8">
                 <div class="card p-6 rounded-2xl text-center fade-in">
